Fixed parsing for a few specific songs

--- a/stored/classic/68.html
+++ b/stored/classic/68.html
@@ -37,7 +37,7 @@
 <a class=br name=1>&nbsp;</a>
 <div class=verse>
 <p><a class=greenbox href=#0><span class=wbox>&nbsp;1&nbsp;</span></a></p>
-<p class=line>Lord, Thy Name is callèd Jesus,</p>
+<p class=line>Lord, Thy Name is call&#232;d Jesus,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;Wonderful is this dear Name;</p>
 <p class=line>Thou wast brought forth of the virgin,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;And the Son of man became.</p>
