Fix song 62's special characters

--- a/stored/classic/62.html
+++ b/stored/classic/62.html
@@ -47,7 +47,7 @@
 <p class=line2>&nbsp;&nbsp;&nbsp;Called e'en with a human name.</p>
 <p class=line>Taking thus the human nature,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;Thou as man the serpent trod;</p>
-<p class=line>By the Cross his head Thou bruisèd</p>
+<p class=line>By the Cross his head Thou bruis&#232;d</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;And fulfilled the plan of God.</p>
 </div>
 <a class=br>&nbsp;</a>
@@ -65,7 +65,7 @@
 <p class=line>To destroy the devil, Satan,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;In our stead and for our sake.</p>
 <p class=line>With the name of Jesus given</p>
-<p class=line2>&nbsp;&nbsp;&nbsp;And Emmanuel callèd too,</p>
+<p class=line2>&nbsp;&nbsp;&nbsp;And Emmanuel call&#232;d too,</p>
 <p class=line>Thou becam'st our precious Savior,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;Bringing us salvation true.</p>
 </div>
