Fix song 556's special characters

--- a/stored/classic/556.html
+++ b/stored/classic/556.html
@@ -45,7 +45,7 @@
 <a class=br name=1>&nbsp;</a>
 <div class=verse>
 <p><a class=greenbox href=#0><span class=wbox>&nbsp;1&nbsp;</span></a></p>
-<p class=line>Thy name is sweet as ointment pourèd forth;</p>
+<p class=line>Thy name is sweet as ointment pour&#232;d forth;</p>
 <p class=line>Better Thy love than wine, O draw Thou me!</p>
 <p class=line>If we the footsteps follow of the flock,</p>
 <p class=line>Entered Thy fellowship of love we'll be.</p>
