Fix song 751's special characters

--- a/stored/classic/751.html
+++ b/stored/classic/751.html
@@ -51,7 +51,7 @@
 <p><a class=greenbox href=#0><span class=wbox>&nbsp;2&nbsp;</span></a></p>
 <p class=line>It is not by letter,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;But by Spirit 'tis,</p>
-<p class=line>I will be approvèd,</p>
+<p class=line>I will be approv&#232;d,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;Share Thy life of bliss.</p>
 <p class=line>It is not man's teaching,</p>
 <p class=line2>&nbsp;&nbsp;&nbsp;But anointing Thine,</p>
