Fix 171.html and added {'name': 'Speak to the rock who was smitten for our full salvation', 'path': '/en/hymn/ns/738'} to search_song_drink.txt to make test pass

--- a/stored/classic/171.html
+++ b/stored/classic/171.html
@@ -35,9 +35,6 @@
 <a class=greenbox href=#4><span class=wbox>&nbsp;4&nbsp;</span></a>
 </p></div>
 <a class=br>&nbsp;</a>
-<p class=note>
-<sup>*</sup>henna: an Old World plant, prized for its fragrant yellow and white flowers. (Song of Songs 1:14)
-</p>
 <a class=br name=1>&nbsp;</a>
 <div class=verse>
 <p><a class=greenbox href=#0><span class=wbox>&nbsp;1&nbsp;</span></a></p>
@@ -48,7 +45,7 @@
 </div>
 <a class=br>&nbsp;</a>
 <div class=chorus>
-<p class=cline>Lord, like the pretty henna<sup>*</sup>-flower,</p>
+<p class=cline>Lord, like the pretty henna-flower*,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;In vineyards blossoming Thou art;</p>
 <p class=cline>Incomp'rable Thy beauty is,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;Admires and loves our heart!</p>
@@ -63,7 +60,7 @@
 </div>
 <a class=br>&nbsp;</a>
 <div class=chorus>
-<p class=cline>Lord, like the pretty henna<sup>*</sup>-flower,</p>
+<p class=cline>Lord, like the pretty henna-flower*,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;In vineyards blossoming Thou art;</p>
 <p class=cline>Incomp'rable Thy beauty is,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;Admires and loves our heart!</p>
@@ -78,7 +75,7 @@
 </div>
 <a class=br>&nbsp;</a>
 <div class=chorus>
-<p class=cline>Lord, like the pretty henna<sup>*</sup>-flower,</p>
+<p class=cline>Lord, like the pretty henna-flower*,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;In vineyards blossoming Thou art;</p>
 <p class=cline>Incomp'rable Thy beauty is,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;Admires and loves our heart!</p>
@@ -93,10 +90,14 @@
 </div>
 <a class=br>&nbsp;</a>
 <div class=chorus>
-<p class=cline>Lord, like the pretty henna<sup>*</sup>-flower,</p>
+<p class=cline>Lord, like the pretty henna-flower*,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;In vineyards blossoming Thou art;</p>
 <p class=cline>Incomp'rable Thy beauty is,</p>
 <p class=cline2>&nbsp;&nbsp;&nbsp;Admires and loves our heart!</p>
+</div>
+<a class=br>&nbsp;</a>
+<div class=other>
+* Henna: an Old World plant, prized for its fragrant yellow and white flowers. (Song of Songs 1:14)
 </div>
 <a class=br>&nbsp;</a>
 <div class=vlinksbox>
